Fix all the shit. (#54)
* Fix UI vendors versions.

* Remove spotbugs.

* Remove powermock.

* Remove jgiven.

* Add Java 17 support. Migrate to Gradle to 7+. Update GitHub action workflows.

Co-authored-by: Maksim Kostromin <maksim.kostromin@leovegas.com>